--- a/templates/todo.html
+++ b/templates/todo.html
@@ -6,9 +6,12 @@
             <h1>Allo {{ user }}!</h1>
         </div>
         <ul>
-           <li><a href="{{ url_for('list_tasks_for_me') }}">À Faire par moi</a></li>
-           <li><a href="{{ url_for('list_tasks_for_all') }}">À Faire par tous</a></li>
            <li><a href="{{ url_for('list_tasklists') }}">Listes de Tâches</a></li>
+           <li><a href="{{ url_for('list_tasks_for_me') }}">Tâches À Faire Par Moi</a></li>
+           <li><a href="{{ url_for('list_tasks_for_all') }}">Tâches De Tout Le Monde</a></li>
+           <li><a href="{{ url_for('list_tasks_not_assigned') }}">Tâches Non Assignées</a></li>
+           <li><a href="{{ url_for('list_tasks_no_sched') }}">Tâches Qui N'Ont Pas De Cédule</a></li>
+           <li><a href="{{ url_for('list_tasks_inactive') }}">Tâches Inactives</a></li>
            <li><a href="{{ url_for('list_tags') }}">Liste des Étiquettes</a></li>
            <li><a href="{{ url_for('list_users') }}">Liste des Usagers</a></li>
         </ul>
