--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                 <li><a href="{{ url_for('list_tasks_inactive') }}">Qui Sont Inactives</a></li>
             </ul>
           <li><a href="{{ url_for('list_tags') }}">Étiquettes</a></li>
-          <li><a href="{{ url_for('list_users') }}">Usagers</a></li>
+          <li><a href="{{ url_for('list_users') }}">Utilisateurs</a></li>
           <li><a href="{{ url_for('logout') }}">Déconnecter</a></li>
         {% else %}
           <li><a href="{{ url_for('login') }}">Connecter</a></li>
